# gitlab-remote-include

./: .gitignore  AUTHORS.md  README.md  pyproject.toml  requirements.txt  setup.py
gitlab_remote_include/: __init__.py  gilab_project_importer.py  remote_include.py
src/gitlab_remote_include/: __init__.py  gilab_project_importer.py  remote_include.py
